# MemModPro

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  nav.cpp  nav.hpp  process.cpp  process.hpp  widgets.cpp  widgets.hpp
